# nucleo-matcher-napi

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  vitest.config.ts
.changeset/: funny-moons-send.md  polite-mammals-scream.md
.github/workflows/: benchmark.yml  changesets.yml  ci.yml  release.yml
benchmark/: corpus.mjs  index.mjs  package.json  runner.mjs
scripts/: electron-smoke.cjs
src/: lib.rs
tests/: matcher.test.ts  ranking.test.ts
